Fixed stretch bug

--- a/search-results-page/search-results.css
+++ b/search-results-page/search-results.css
@@ -58,8 +58,8 @@ h1 {
 
 .inside-form {
 	display: inline-block;
-	width: 23%;
-	height: 450px;
+	width: 30%;
+	height: 50%;
 	position: relative;
 	background: #262626;
 	border: white 2px solid;
